fix horizontal scrolling issue by removing all instances of width:100vw

--- a/client/src/assets/stylesheets/App.scss
+++ b/client/src/assets/stylesheets/App.scss
@@ -30,11 +30,9 @@ main {
   background-color: #f94960;
   display: flex;
   flex-wrap: wrap;
-  height: 100%;
+  height: 100vh;
   margin: 0;
-  min-height: 100vh;
   padding: 0;
-  width: 100%;
 }
 Link {
   text-decoration: none;
