--- a/client/src/assets/stylesheets/Navbar.scss
+++ b/client/src/assets/stylesheets/Navbar.scss
@@ -1,5 +1,5 @@
 .App .Navbar {
-  width: 100vw;
+  width: 100%;
 }
 // HEADER - PRIMARY
 .yellowNavbar {
