--- a/client/src/assets/stylesheets/PageFooter.scss
+++ b/client/src/assets/stylesheets/PageFooter.scss
@@ -1,5 +1,5 @@
 .PageFooter {
-  width: 100vw;
+  width: 100%;
   align-items: center;
   display: flex;
   position: static;
